--- a/compose.yml
+++ b/compose.yml
@@ -3,14 +3,12 @@ services:
   # --- Infrastructure Layer ---
   db:
     image: postgres:15-alpine
-    container_name: sim-cityview-db
-    # パスワード不要の信頼できる接続
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_DB: gamedb
     volumes:
       - ./volume-db:/var/lib/postgresql/data
-      - ./init-scripts:/docker-entrypoint-initdb.d:ro
+      - ./db/init-scripts:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -20,7 +18,6 @@ services:
 
   redis:
     image: redis:7-alpine
-    container_name: sim-cityview-redis
     command: redis-server --appendonly yes
     volumes:
       - ./volume-redis:/data
@@ -33,12 +30,11 @@ services:
 
   storage:
     image: nginx:alpine
-    container_name: sim-cityview-storage
     volumes:
       - ./volume-storage:/data
       - ./nginx/webdav.conf:/etc/nginx/conf.d/default.conf:ro
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://127.0.0.1/"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -47,15 +43,14 @@ services:
   # --- Application Layer ---
   backend:
     build: ./backend
-    container_name: sim-cityview-backend
     environment:
-      # パスワード不要の接続
       DATABASE_URL: postgres://postgres@db:5432/gamedb
       AIRFLOW_API_URL: http://airflow-webserver:8080/api/v1
       STORAGE_URL: http://storage
-    # 管理画面は外部公開せず、メイン画面のみ公開
     ports:
-      - "8000:8000"
+      - 8000:8000 # メイン
+      - 8001:8001 # 管理画面
+      - 8002:8002 # Airflow連携用内部API
     volumes:
       - ./volume-backend-logs:/app/logs
     depends_on:
@@ -79,7 +74,7 @@ services:
       AIRFLOW__API__AUTH_BACKEND: airflow.api.auth.backend.default
       BACKEND_INTERNAL_URL: http://backend:8002
     volumes:
-      - ./volume-airflow-dags:/opt/airflow/dags
+      - ./airflow/dags:/opt/airflow/dags:ro
       - ./volume-airflow-logs:/opt/airflow/logs
     depends_on:
       db:
@@ -90,11 +85,10 @@ services:
 
   airflow-webserver:
     <<: *airflow-common
-    container_name: sim-cityview-airflow-web
     command: webserver
     # ローカル開発用にlocalhostのみ公開
     ports:
-      - "127.0.0.1:8003:8080"
+      - 8003:8080
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
       interval: 30s
@@ -103,7 +97,6 @@ services:
 
   airflow-scheduler:
     <<: *airflow-common
-    container_name: sim-cityview-airflow-scheduler
     command: scheduler
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
@@ -114,7 +107,6 @@ services:
   # --- Airflow Worker Layer ---
   airflow-worker-capture:
     <<: *airflow-common
-    container_name: sim-cityview-worker-capture
     command: celery worker -q capture --concurrency 2
     deploy:
       replicas: 2
@@ -123,21 +115,18 @@ services:
 
   airflow-worker-coords:
     <<: *airflow-common
-    container_name: sim-cityview-worker-coords
     command: celery worker -q coords --concurrency 2
     deploy:
       replicas: 2
 
   airflow-worker-tiles:
     <<: *airflow-common
-    container_name: sim-cityview-worker-tiles
     command: celery worker -q tiles --concurrency 2
     deploy:
       replicas: 2
 
   airflow-worker-cleanup:
     <<: *airflow-common
-    container_name: sim-cityview-worker-cleanup
     command: celery worker -q cleanup --concurrency 2
     deploy:
       replicas: 2
@@ -147,11 +136,12 @@ services:
     build: ./service-capture
     environment:
       STORAGE_URL: http://storage
-      GAME_EXECUTABLE: /app/game/simutrans
-      DISPLAY: ":99"
+      GAME_EXECUTABLE: simutrans-extended
     volumes:
       - ./volume-game-data:/app/game-data
       - ./volume-storage:/data
+      - ./volume-bin:/app/bin
+      - ./volume-save:/root/simutrans
     deploy:
       replicas: 2
     restart: unless-stopped
