--- a/compose.yml
+++ b/compose.yml
@@ -69,7 +69,7 @@ services:
       AIRFLOW__CORE__EXECUTOR: CeleryExecutor
       AIRFLOW__API__AUTH_BACKEND: airflow.api.auth.backend.default
       SERVICE_CAPTURE_URL: http://service-capture:5000
-      SERVICE_COORDS_URL: http://service-coords:5001
+      SERVICE_COORDS_URL: http://service-estimate:5001
       SERVICE_TILE_CUT_URL: http://service-tile-cut:5002
       SERVICE_TILE_MERGE_URL: http://service-tile-merge:5003
       SERVICE_TILE_COMPRESS_URL: http://service-tile-compress:5004
@@ -129,9 +129,9 @@ services:
     deploy:
       replicas: 2
 
-  airflow-worker-coords:
+  airflow-worker-estimate:
     <<: *airflow-common
-    command: celery worker -q coords --concurrency 2
+    command: celery worker -q estimate --concurrency 2
     deploy:
       replicas: 2
 
@@ -192,8 +192,8 @@ services:
       replicas: 2
     restart: unless-stopped
 
-  service-coords:
-    build: ./service-coords
+  service-estimate:
+    build: ./service-estimate
     environment:
       STORAGE_URL: http://storage
       IMAGE_MARGIN_WIDTH: ${IMAGE_MARGIN_WIDTH}
