フロントエンドを色々改良

--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -14,15 +14,21 @@ http {
         image/avif avif;
     }
 
-    resolver 127.0.0.11 valid=30s;
+    # ログ設定（エラーを記録しない）
+    map $status $loggable {
+        ~^[45]  0;
+        default 1;
+    }
+
+    access_log /var/log/nginx/access.log combined if=$loggable;
+    error_log /var/log/nginx/error.log warn;
 
     upstream backend_app {
         server 127.0.0.1:4567;
     }
 
-    # 環境変数からStorageホストを取得（デフォルト: storage）
-    map $http_host $storage_host {
-        default "${STORAGE_HOST}";
+    upstream storage_backend {
+        server ${STORAGE_HOST}:80;
     }
 
     server {
@@ -35,30 +41,41 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # タイル配信（storageへプロキシ）
+        # タイル配信（storageへプロキシ、404を透過的に処理）
         location ~ ^/tiles/([^/]+)/(.*)$ {
-            # $1 = save_data_name (例: demo)
-            # $2 = z/x/y.avif (例: 0/0/0.avif)
-            
             set $save_data_name $1;
             set $tile_path $2;
             
-            # 環境変数を使用してStorageホストを指定
-            set $storage_url "${STORAGE_HOST}";
-            
-            proxy_pass http://$storage_url:80/images/tiles/$save_data_name/$tile_path;
-            proxy_set_header Host $storage_url;
+            # storageへプロキシ
+            proxy_pass http://storage_backend/images/tiles/$save_data_name/$tile_path;
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
+            
+            # タイムアウト設定
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
+            
+            # 404とゲートウェイエラーを透過的に処理
+            proxy_intercept_errors on;
+            error_page 404 502 503 504 = @empty_tile;
             
             # キャッシュヘッダー
             expires 1d;
             add_header Cache-Control "public, immutable";
         }
 
-        # API エンドポイント
+        # 空のタイルを返す（エラー時）
+        location @empty_tile {
+            internal;
+            # 204 No Contentを返す（ブラウザは空として扱う）
+            return 204;
+        }
+
+        # APIエンドポイント
         location /api/ {
             proxy_pass http://backend_app;
             proxy_set_header Host $host;
