--- a/compose.yml
+++ b/compose.yml
@@ -16,6 +16,7 @@ x-airflow-common: &x-airflow-common
       BACKEND_INTERNAL_URL: http://backend:8002
       STORAGE_URL: http://storage
       ADJUSTED_PAKSIZE: ${ADJUSTED_PAKSIZE}
+      SAVE_DATA_NAME: ${SAVE_DATA_NAME}
       TILE_SIZE: ${TILE_SIZE}
       DELTA: ${DELTA}
       MAP_TILES_X: ${MAP_TILES_X}
@@ -70,9 +71,10 @@ services:
 
   storage:
     image: nginx:alpine
+    command: ["sh", "-c", "mkdir -p /data/images/screenshots && mkdir -p /data/images/rawtiles && mkdir -p /data/images/tiles && chown -R nginx:nginx /data && nginx -g 'daemon off;'"]
     volumes:
       - ./volume-storage:/data
-      - ./nginx/webdav.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./storage/webdav.conf:/etc/nginx/conf.d/default.conf:ro
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://127.0.0.1/"]
       interval: 30s
@@ -178,7 +180,7 @@ services:
     build: ./service-capture
     environment:
       STORAGE_URL: http://storage
-      GAME_EXECUTABLE: simutrans-extended
+      SIMUTRANS_EXECUTABLE: ${SIMUTRANS_EXECUTABLE}
       PAKSET_NAME: ${PAKSET_NAME}
       CAPTURE_SCREEN_WIDTH: ${CAPTURE_WIDTH}
       CAPTURE_SCREEN_HEIGHT: ${CAPTURE_HEIGHT}
@@ -186,7 +188,7 @@ services:
       CAPTURE_CROP_HEIGHT: ${IMAGE_HEIGHT}
       CAPTURE_CROP_OFFSET_X: ${CROP_OFFSET_X}
       CAPTURE_CROP_OFFSET_Y: ${CROP_OFFSET_Y}
-      CAPTURE_REDRAW_WAIT_SECONDS: 0.4 # ズームレベルが低い場合は描画に時間がかかることがあるため長めに設定すること
+      CAPTURE_REDRAW_WAIT_SECONDS: 1.0 # ズームレベルが低い場合は描画に時間がかかることがあるため長めに設定すること
       CAPTURE_SCROT_SETTLE_SECONDS: 0.1 # scrotがフレームバッファを読み込むまでの待機時間
       CAPTURE_SCROT_TIMEOUT_SECONDS: 30
       CAPTURE_CROP_TIMEOUT_SECONDS: 30
@@ -200,7 +202,7 @@ services:
     volumes:
       - ./volume-storage:/data
       - ./volume-bin:/app/bin
-      - ./volume-save:/root/simutrans
+      - ./volume-save:/root/simutrans/save
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:5000/health"]
       interval: 30s
